# mouseplay

./: .gitignore  Cargo.toml  README.md  build.bat  mappings.json
.cargo/: config
loader/: Cargo.toml
mappings/: overwatch.json
mouseplay/: Cargo.toml
mouseplay/src/: console.rs  hooks.rs  lib.rs  mapper.rs
mouseplay/src/controller/: ds4.rs  mod.rs
mouseplay/src/input/: mod.rs  raw_input.rs
